add style to cards

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,3 +1,7 @@
 @use './styles/partials/variables' as *;
 
 @import 'bootstrap/scss/bootstrap';
+
+body {
+    background-color: $backgroundColor;
+}
